--- a/index.html
+++ b/index.html
@@ -1,25 +1,26 @@
 <!DOCTYPE html>
-<html lang="uk">
+<html lang="uk" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Звуковий дизайн</title>
+    <title>SoundByte</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <!-- 🔝 Навігація -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">🎧 Звуковий Дизайн</a>
+        <img class="img-brand" src="img/audio.png" width="80">
+        <a class="navbar-brand" href="#">SoundByte</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item"><a class="nav-link" href="#">Головна</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Пости</a></li>
+                <li class="nav-item"><a class="nav-link" href="#posts">Пости</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">Контакти</a></li>
                 <li class="nav-item"><a class="nav-link btn btn-outline-light btn-sm" href="/user/login.php">Увійти</a></li>
             </ul>
@@ -27,18 +28,27 @@
     </div>
 </nav>
 
+<!-- 💡 Hero Section -->
+<section class="hero-section d-flex align-items-center text-center text-white">
+    <div class="container">
+        <h1 class="display-4 fw-bold">Ласкаво просимо у світ звукового дизайну</h1>
+        <p class="lead mt-3 mb-4">Досліджуй магію звуку — від студійного мікшування до створення унікальних аудіоефектів.</p>
+        <a href="#posts" class="btn btn-warning btn-lg">Переглянути пости</a>
+    </div>
+</section>
+
 <!-- 🏠 Контент -->
-<div class="container my-5">
-    <h1 class="mb-4 text-center">Останні публікації</h1>
+<div id="posts" class="container my-5">
+    <h2 class="mb-4 text-center">Останні публікації</h2>
 
     <div class="row">
         <!-- 🔁 Пост -->
         <div class="col-md-4 mb-4">
-            <div class="card h-100 shadow">
+            <div class="card h-100 shadow-sm">
                 <img src="uploads/sample.jpg" class="card-img-top" alt="Зображення поста">
                 <div class="card-body">
                     <h5 class="card-title">Назва поста</h5>
-                    <p class="card-text">Короткий опис поста про роботу зі звуком.</p>
+                    <p class="card-text">Короткий опис поста про роботу зі звуком. Натхнення для звукових дизайнерів.</p>
                     <a href="post.php?id=1" class="btn btn-primary">Детальніше</a>
                 </div>
             </div>
