--- a/index.html
+++ b/index.html
@@ -9,35 +9,35 @@
 </head>
 <body>
 
-<!-- 🔝 Навігація -->
 <nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
-        <img class="img-brand" src="img/audio.png" width="80">
-        <a class="navbar-brand" href="#">SoundByte</a>
+        <img class="img-brand" src="img/audio.png" width="80" style="margin-left: 100px;">
+        <a class="navbar-brand ms-3" href="#">SoundByte</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
-                <li class="nav-item"><a class="nav-link" href="#">Головна</a></li>
-                <li class="nav-item"><a class="nav-link" href="#posts">Пости</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Контакти</a></li>
-                <li class="nav-item"><a class="nav-link btn btn-outline-light btn-sm" href="/user/login.php">Увійти</a></li>
+                <li class="nav-item me-4"><a class="nav-link" href="#">Головна</a></li>
+                <li class="nav-item me-4"><a class="nav-link" href="#posts">Пости</a></li>
+                <li class="nav-item me-4"><a class="nav-link" href="#">Контакти</a></li>
+                <li class="nav-item">
+                    <a class="nav-link btn btn-outline-light btn-sm" style="margin-left: 150px;" href="/user/login.php">Увійти</a>
+                </li>
             </ul>
         </div>
     </div>
 </nav>
 
-<!-- 💡 Hero Section -->
+
 <section class="hero-section d-flex align-items-center text-center text-white">
     <div class="container">
-        <h1 class="display-4 fw-bold">Ласкаво просимо у світ звукового дизайну</h1>
+        <h1 class="display-2 fw-bold">Ласкаво просимо у світ звукового дизайну та роботи зі звуком</h1>
         <p class="lead mt-3 mb-4">Досліджуй магію звуку — від студійного мікшування до створення унікальних аудіоефектів.</p>
         <a href="#posts" class="btn btn-warning btn-lg">Переглянути пости</a>
     </div>
 </section>
 
-<!-- 🏠 Контент -->
 <div id="posts" class="container my-5">
     <h2 class="mb-4 text-center">Останні публікації</h2>
 
@@ -58,11 +58,30 @@
 </div>
 
 <!-- ⚓ Підвал -->
-<footer class="bg-dark text-white text-center py-3">
+<footer class="footer-custom">
     <div class="container">
-        &copy; <?php echo date("Y"); ?> Звуковий дизайн. Усі права захищено.
+        <div class="row text-start text-md-center">
+            <div class="col-md-6 mb-3">
+                <h5>Звуковий Дизайн</h5>
+                <p>
+                    Ми створюємо унікальні звукові рішення для реклами, кіно та ігор.
+                    Висока якість — наша мета.
+                </p>
+            </div>
+            <div class="col-md-6 mb-3">
+                <h5>Контакти</h5>
+                <p>Email: <a href="mailto:info@audio.com">info@audio.com</a></p>
+                <p>Телефон: <a href="tel:+380991234567">+38 (099) 123-45-67</a></p>
+                <p>Адреса: м. Київ, вул. Звукова, 10</p>
+            </div>
+        </div>
+        <hr class="bg-light">
+        <div class="text-center small mt-3">
+            &copy; <?php echo date("Y"); ?> Звуковий дизайн. Усі права захищено.
+        </div>
     </div>
 </footer>
+
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
